align show tracks, fix visible option and delete only available to user

--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -12,7 +12,7 @@ $font-size-base: 1rem;
 // Colors
 $body-color: $gray;
 $primary:    $my-blue;
-$success:    $green;
+$success:    #1eb954;
 $info:       rgb(231,32,78);
 $danger:     $my-pink;
 $warning:    $my-purple;
